--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name=author content="Ronalds Vilcins - https://laraboot-io.github.io/laravel-images/">
 <title>Liste</title>
 <meta name=description content="Minimalistic Hugo blogging theme">
-<meta property="og:title" content="Home">
+<meta property="og:title" content="Liste">
 <meta property="og:description" content="Minimalistic Hugo blogging theme">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://laraboot-io.github.io/laravel-images/">
-<meta itemprop=name content="Home">
+<meta itemprop=name content="Liste">
 <meta itemprop=description content="Minimalistic Hugo blogging theme">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Home">
+<meta name=twitter:title content="Liste">
 <meta name=twitter:description content="Minimalistic Hugo blogging theme">
 <link rel=canonical href=https://laraboot-io.github.io/laravel-images/>
 <link rel=alternate type=application/atom+xml title=Liste href=https://laraboot-io.github.io/laravel-images/atom.xml>
@@ -27,102 +27,6 @@
 </header>
 <article>
 <ul>
-<li>
-<time>2019/03/11</time>
-<a href=/laravel-images/writing/markdown-syntax/>Markdown Syntax Guide</a>
-</li>
-<li>
-<time>2019/03/09</time>
-<a href=/laravel-images/writing/placeholder-text/>Placeholder Text</a>
-</li>
-<li>
-<time>2019/03/08</time>
-<a href=/laravel-images/writing/math-typesetting/>Math Typesetting</a>
-</li>
-<li>
-<time>2019/03/05</time>
-<a href=/laravel-images/writing/emoji-support/>Emoji Support</a>
-</li>
-<li>
-<time>2017/03/11</time>
-<a href=/laravel-images/writing/lorem-ipsum-copy/>Lorem ipsum dolores eos</a>
-</li>
-<li>
-<time>2017/03/11</time>
-<a href=/laravel-images/writing/lorem-ipsum-copy-2/>Lorem ipsum dolores eos</a>
-</li>
-<li>
-<time>2017/03/11</time>
-<a href=/laravel-images/writing/lorem-ipsum/>Lorem ipsum dol ratione voluptatem</a>
-</li>
-<li>
-<time>2016/09/08</time>
-<a href=/laravel-images/writing/lorem-ipsum-sit-ale/>Lorem ipsum sit ale natus unde</a>
-</li>
-<li>
-<time>2016/07/08</time>
-<a href=/laravel-images/writing/ipsum-lore-guti-sit-volu-sit-amet/>Lorem ipsum persp unde omnis</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale-copy-2/>Lorem res eos qui ratione voluptatem</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale/>Lorem qui ratione voluptatem</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale-copy-4/>Lorem ipsum qui ratione voluptatem</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale-copy/>Lorem ipsum magni ratione voluptatem</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale-copy-3/>Lorem ipsum magni eos voluptatem</a>
-</li>
-<li>
-<time>2015/09/08</time>
-<a href=/laravel-images/writing/lorem-catu-ale-copy-5/>Lorem ipsne voluptatem dolores eos</a>
-</li>
-<li>
-<time>2014/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de/>Loremratione voluptatem</a>
-</li>
-<li>
-<time>2014/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de-re-mo/>Lorem pers unde dolores</a>
-</li>
-<li>
-<time>2014/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de-re-mo-mi/>Lorem ipsum te</a>
-</li>
-<li>
-<time>2014/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de-copy/>Lorem ipsum dol voluptatem</a>
-</li>
-<li>
-<time>2014/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de-copy-2/>Lorem ipsum dol eos qui ratione</a>
-</li>
-<li>
-<time>2014/05/08</time>
-<a href=/laravel-images/writing/ipsum-lore-de-re/>Lorem ipsum unde omnis iste</a>
-</li>
-<li>
-<time>2013/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore/>Lorem ipsum tut dolores eos qui ration</a>
-</li>
-<li>
-<time>2013/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-copy/>Lorem ipsum tut</a>
-</li>
-<li>
-<time>2013/09/08</time>
-<a href=/laravel-images/writing/ipsum-lore-copy-2/>Lorem ipsum tut</a>
-</li>
 </ul>
 </article>
 </body>
