deploy: 9eb27fdc7bf12c86ac8db7ba88c2e16a46db97b7

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 </header>
 <article>
 <ul>
+<li>
+<time>2021/11/14</time>
+<a href=/laravel-images/writing/9eb27fdc7bf12c86ac8db7ba88c2e16a46db97b7/>9eb27fdc7bf12c86ac8db7ba88c2e16a46db97b7</a>
+</li>
 </ul>
 </article>
 </body>
