--- a/index.html
+++ b/index.html
@@ -29,136 +29,16 @@
 <article>
 <ul>
 <li>
-<time>2022/06/07</time>
-<a href=/laravel-images/writing/cr-cr-13/>cr-cr-13</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.9.0/>v9.9.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.8.1/>v9.8.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.8.0/>v9.8.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.7.0/>v9.7.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.6.0/>v9.6.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.5.1/>v9.5.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.5.0/>v9.5.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.4.1/>v9.4.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.4.0/>v9.4.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.3.1/>v9.3.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.3.0/>v9.3.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.2.0/>v9.2.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
+<time>2022/06/10</time>
 <a href=/laravel-images/writing/v9.17.0/>v9.17.0</a>
 </li>
 <li>
 <time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.16.0/>v9.16.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.15.0/>v9.15.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.14.1/>v9.14.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.14.0/>v9.14.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.13.0/>v9.13.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.12.2/>v9.12.2</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.12.1/>v9.12.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.12.0/>v9.12.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.11.0/>v9.11.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.10.1/>v9.10.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.10.0/>v9.10.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.1.0/>v9.1.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.2/>v9.0.2</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.1/>v9.0.1</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.0-beta.5/>v9.0.0-beta.5</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.0-beta.4/>v9.0.0-beta.4</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.0-beta.3/>v9.0.0-beta.3</a>
-</li>
-<li>
-<time>2021/11/14</time>
-<a href=/laravel-images/writing/v9.0.0/>v9.0.0</a>
-</li>
-<li>
-<time>2021/11/14</time>
 <a href=/laravel-images/writing/next/>next</a>
+</li>
+<li>
+<time>2021/11/14</time>
+<a href=/laravel-images/writing/latest/>next</a>
 </li>
 </ul>
 </article>
