deploy: 1d99d6cb1a213c51ddfb74046acfec20a9b56e4a

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </li>
 <li>
 <time>2021/11/14</time>
-<a href=/laravel-images/writing/latest/>next</a>
+<a href=/laravel-images/writing/latest/>latest</a>
 </li>
 </ul>
 </article>
